--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="username">Username</string>
     <string name="user_icon">User Icon</string>
     <string name="delete">Delete</string>
+    <string name="back_button" />
 </resources>
