--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="user_icon">User Icon</string>
     <string name="delete">Delete</string>
     <string name="back_button" />
+    <string name="moderator_dashboard">Moderator Dashboard</string>
 </resources>
